# pdbe_covariations

./: .coverage  Makefile  README.md  report.xml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
cov_pairs/: covariations.py
cov_pairs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cov_pairs/tests/: test_covariations.py
cov_pairs/tests/data/: F5HCP3_cov.csv  O27725_cov.csv  O27725_prob.txt  O27725_score.txt
cov_pairs/utils/: arg_utils.py
coverage/: cobertura-coverage.xml
example/: A0A024UZE1.fasta  F5HCP3.a3m  F5HCP3.fasta  F5HCP3_cov.a3m  F5HCP3_cov.hmm  F5HCP3_cov.sto  F5HCP3_id90cov75.a3m  F5HCP3_prob.txt  F5HCP3_score.txt  Q38DE2.fasta  Q38DE2_cov.a3m  Q38DE2_cov.hmm  Q38DE2_cov.sto  Q38DE2_id90cov75.a3m  Q8IKV6.fasta
example/F5HCP3/: F5HCP3.a3m  F5HCP3_id90cov75.a3m
example/pdbe_demo_db/: pdbe_demo_db_cs219.ffindex  pdbe_demo_db_hhm.ffdata  pdbe_demo_db_hhm.ffindex
pdbe_covariations/: .__init__.py.swp  covariations.py  msa_utils.py  pair_msas.py
pdbe_covariations/utils/: arg_utils.py  exceptions.py  execute_command_utils.py  path_utils.py
tests/: conftest.py  test_arg_utils.py  test_covariations.py  test_msa_utils.py  test_pair_msas.py
tests/data/: F5HCP3_id90cov75.a3m  F5HCP3_prob.txt  F5HCP3_score.txt  mock_paired1.a3m  mock_paired2.a3m  paired.fasta
tests/data/pdbe_demo_db/: pdbe_demo_db_a3m.ffdata  pdbe_demo_db_a3m.ffindex  pdbe_demo_db_cs219.ffdata
