[metadata]
name = pdbe_covariations
author = Protein Data Bank in Europe
author_email = pdbehelp@ebi.ac.uk
description = Package to calculate covariation pairs
version = attr: __version__.__version__
url = https://github.com/PDBe-KB/pdbe_covariations
keywords =
  PDB
  FASTA
  UniProt
  hhsuite
  covariations
  UniClust
  gremlin
  sequence
  ligand interactions
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Life Science/Structural Biology
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = find_namespace:
zip_safe: False
scripts =
install_requires =
 numpy
 requests
 pandas
 biopython
 gemmi


[options.extras_require]
dev =
  pytest
  pytest-cov

[options.entry_points]
console_scripts =
 covariations = pdbe_covariations.covariations:main
